working form submit

--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@
 				<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section ftco-animate text-center">
           	<span class="subheading">Experienced Attorneys</span>
-            <h2 class="mb-4">Meet our attorneys</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
+            <h2 class="mb-4">Meet our Doctors</h2>
+            <p>MBBS ( Medical Offier Sadar Hospital, Ramgarh. Ex Fortis Physician, Delhi ) &amp; BDS ( Ex dentist in Dr Jagdeesh dental hospital, Bangalore)</p>
           </div>
         </div>	
 				<div class="row">
@@ -408,8 +408,8 @@
 						<div class="staff">
 							<div class="img" style="background-image: url(images/person_1.jpg);"></div>
 							<div class="text pt-4">
-								<h3>David Smith</h3>
-								<span class="position mb-2">Family Lawyer</span>
+								<h3>Dr Mayank (MBBS)</h3>
+								<span class="position mb-2">Physician</span>
 								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 								<ul class="ftco-social d-flex">
 	                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -424,10 +424,10 @@
 						<div class="staff">
 							<div class="img" style="background-image: url(images/person_2.jpg);"></div>
 							<div class="text pt-4">
-								<h3>David Smith</h3>
-								<span class="position mb-2">Consumer Lawyer</span>
+								<h3>Dr Sarita (BDS)</h3>
+								<span class="position mb-2">Senior Dentist</span>
 								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
-								<ul class="ftco-social d-flex">
+				  <ul class="ftco-social d-flex">
 	                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 	                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
 	                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
@@ -436,38 +436,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-lg-3 ftco-animate">
-						<div class="staff">
-							<div class="img" style="background-image: url(images/person_3.jpg);"></div>
-							<div class="text pt-4">
-								<h3>David Smith</h3>
-								<span class="position mb-2">Criminal Lawyer</span>
-								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
-								<ul class="ftco-social d-flex">
-	                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-	                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-	                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
-	                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-	              </ul>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 col-lg-3 ftco-animate">
-						<div class="staff">
-							<div class="img" style="background-image: url(images/person_4.jpg);"></div>
-							<div class="text pt-4">
-								<h3>David Smith</h3>
-								<span class="position mb-2">Business Lawyer</span>
-								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
-								<ul class="ftco-social d-flex">
-	                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-	                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-	                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
-	                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-	              </ul>
-							</div>
-						</div>
-					</div>
+					
 				</div>
 			</div>
 		</section>
@@ -538,6 +507,7 @@
 			<div class="container">
 				<div class="row no-gutters">
 					<div class="col-md-5" id="map">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14654.396544780699!2d85.3156891!3d23.3302988!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb5ca45b6d3f27d55!2sSPARSH%20HEALTH%20CARE!5e0!3m2!1sen!2sin!4v1595849553867!5m2!1sen!2sin" width="500" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 					</div>
 					<div class="col-md-7 wrap-about pb-md-5 ftco-animate">
 	          <div class="heading-section mb-md-5 pl-md-5 mt-5 pt-3">
@@ -548,15 +518,12 @@
 	          </div>
 	          <div class="pl-md-5 ml-md-5">
 	          	<div class="info-contact mb-5">
-	          		<p><span>Phone:</span> <span>(00) 123 - 456 - 789</span></p>
-	          		<p><span>Fax:</span> <span>(00) 123 - 456 - 789</span></p>
-	          		<p><span>E-Mail:</span> <span><a href="#">info@emial.com</a></span></p>
+	          		<p><span>Phone:</span> <span>+91 8249438098 / 8969622981</span></p>
+	          		<p><span>E-Mail:</span> <span><a href="#">sparshdentalhealthcare@gmail.com</a></span></p>
 	          	</div>
 	          	<div class="info-contact mb-5">
 	          		<h3>Address Information</h3>
-	          		<p><span>Address</span> <span> 203 Fake St. Mountain View, San Francisco, California, USA</span></p>
-	          		<p><span>Fax:</span> <span>(00) 123 - 456 - 789</span></p>
-	          		<p><span>E-Mail:</span> <span><a href="#">info@emial.com</a></span></p>
+	          		<p><span>Address</span> <span> Sparh Health Care, G1, Ground floor, Bhoo Lok Apartment, Opposite HDFC Bank, Hinoo Main Road, Ranchi, Jharkhand. 834002</span></p>
 	          	</div>
 						</div>
 					</div>
@@ -696,7 +663,6 @@
   <script src="js/bootstrap-datepicker.js"></script>
   <script src="js/jquery.timepicker.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
     
