--- a/attorney.html
+++ b/attorney.html
@@ -97,7 +97,7 @@
 						<div class="staff">
 							<div class="img" style="background-image: url(images/person_2.jpg);"></div>
 							<div class="text pt-4">
-								<h3>Dr Sarita</h3>
+								<h3>Dr Sarita (BDS)</h3>
 								<span class="position mb-2">Senior Dentist</span>
 								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 								<ul class="ftco-social d-flex">
