--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,12 @@
 	    </div>
 	  </nav>
     <!-- END nav -->
+    <script>
+      function myFunction() {
+        document.getElementById("userDetails").submit();
+        document.getElementById("userDetails").reset();
+      }
+    </script>
     
     <section class="home-slider js-fullheight owl-carousel">
       <div class="slider-item js-fullheight" style="background-image:url(images/bg_1.jpg);">
@@ -65,8 +71,6 @@
         </div>
       </div>
     </section>
-		
-    <iframe name="hiddenFrame" class="hide"></iframe>
 
 		<section class="ftco-section contact-section">
       <div class="container">
@@ -85,9 +89,10 @@
             <p><span>Email:</span> <a>sparshdentalhealthcare@gmail.com</a></p>
           </div>
         </div>
+        <iframe name="hiddenFrame" width="0" height="0"></iframe>
         <div class="row block-9">
           <div class="col-md-6 pr-md-5">
-            <form id="  userDetails" action="https://3dy73qo40d.execute-api.ap-south-1.amazonaws.com/details" method="POST" target="hiddenFrame">
+            <form id="userDetails" action="https://3dy73qo40d.execute-api.ap-south-1.amazonaws.com/details" method="POST" target="hiddenFrame">
               <div class="form-group">
                 <input type="text" class="form-control" name="name" placeholder="Your Name">
               </div>
@@ -104,7 +109,7 @@
                 <input type="text" class="form-control" name="message" placeholder="Message">
               </div>
               <div class="form-group">
-                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+                <input type="button" onclick="myFunction()" value="Send Message" class="btn btn-primary py-3 px-5">
               </div>
             </form>
           
