working with video

--- a/index.html
+++ b/index.html
@@ -134,8 +134,10 @@
 		            		<span class="flaticon-bar-chart"></span>
 		              </div>
 		              <div class="media-body pl-4">
-		                <h3 class="heading">Business Law</h3>
-		                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+		                <h3 class="heading">Painless root canals</h3>
+		                <p>Tooth pain may be a symptom indicating there’s something wrong with the nerve inside a tooth.
+
+Root canals can now be performed easier, faster and with minimal discomfort.</p>
 		              </div>
 		            </div>    
 		          </div>
@@ -145,8 +147,8 @@
 		            		<span class="flaticon-medicine"></span>
 		              </div>
 		              <div class="media-body pl-4">
-		                <h3 class="heading">Drug Control Law</h3>
-		                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+		                <h3 class="heading">Pedodontics/Child Dentistry</h3>
+		                <p>Text- dental care starts at home as early as 6 months of age. We provide all round care so that dental cavity and uneven teeth is prevented, called as preventive dentistry.</p>
 		              </div>
 		            </div>      
 		          </div>
@@ -156,8 +158,8 @@
 		            		<span class="flaticon-prison"></span>
 		              </div>
 		              <div class="media-body pl-4">
-		                <h3 class="heading">Criminal Law</h3>
-		                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+		                <h3 class="heading">Dentures/False Teeth - Fixed/Removable</h3>
+		                <p>Text- smile is most beautiful makeup which can be worn. We provide all varieties of  tooth coloured dentures and ceramic teeth</p>
 		              </div>
 		            </div>      
 		          </div>
@@ -170,21 +172,27 @@
 		<section class="ftco-section ftc-no-pb">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/about.jpg);">
-						<a href="https://vimeo.com/45830194" class="icon popup-vimeo d-flex justify-content-center align-items-center">
+					<div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/bg_1.jpg);">
+						<a href="https://vimeo.com/442328617" class="icon popup-vimeo d-flex justify-content-center align-items-center">
 							<span class="icon-play"></span>
 						</a>
 					</div>
 					<div class="col-md-7 wrap-about pb-md-5 ftco-animate">
 	          <div class="heading-section mb-5 pl-md-5">
 	          	<div class="pl-md-5 ml-md-5">
-		          	<span class="subheading">Company Overview</span>
-		            <h2 class="mb-4">Learned about the Law</h2>
+		          	<span class="subheading">Clinic Overview</span>
+		            <h2 class="mb-4">Total health care solutions</h2>
 	            </div>
 	          </div>
 	          <div class="pl-md-5 ml-md-5 mb-5">
-							<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
-							<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+
+	          				<p>General physician:</p>
+	          				<p>Our specialist always aspire to bridge the gap between your benefit plan and the health needs of your family. We aim at providing best general health care advice with as less test as possible</p>
+
+							<p>Dental Clinic / Dentistry:</p>
+							<p>
+We are determined at providing best dental treatment at affordable rates with outmost care. Providing preventive Dentistry instead of curative dentistry naims at keeping tooth extractions and root canals as last resort</p>
+							<p>We try our best to save tooth from any major treatment. We also aim to maintain overall  health of teeth for longevity</p>
 							<p><a href="#" class="btn-custom">Learn More <span class="ion-ios-arrow-forward"></span></a></p>
 						</div>
 					</div>
