about page changes

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<div class="row">
 					<div class="col-md-5 col-lg-4">
 						<form id="userDetails" action="https://3dy73qo40d.execute-api.ap-south-1.amazonaws.com/details" method="POST" target="hiddenFrame" class="getaquote-form">
-							<h3>Post A Query</h3>
+							<h3>Post Query</h3>
 							<div class="wrap">
 	              <div class="form-group">
 	                <input type="text" class="form-control" name="name" placeholder="Name">
@@ -255,13 +255,13 @@ We are determined at providing best dental treatment at affordable rates with ou
     <section class="ftco-section ftc-no-pb">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center order-md-last" style="background-image: url(images/about-2.jpg);">
+					<div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center order-md-last" style="background-image: url(images/14.jpg);">
 					</div>
 					<div class="col-md-7 wrap-about ftco-animate">
 	          <div class="heading-section mb-5 pl-md-5">
 	          	<div class="pr-md-5 mr-md-5 text-md-right">
-		          	<span class="subheading">Company Help Intro</span>
-		            <h2 class="mb-4">The People We Help</h2>
+		          	<span class="subheading">Clinic Service</span>
+		            <h2 class="mb-4">Our Emergency Services</h2>
 	            </div>
 	          </div>
 	          <div class="pr-md-5 pl-md-5 mr-md-5 mb-5">
@@ -270,8 +270,8 @@ We are determined at providing best dental treatment at affordable rates with ou
 	            		<span class="flaticon-balance"></span>
 	              </div>
 	              <div class="media-body pr-4 order-md-first text-md-right">
-	                <h3 class="heading">Fight for Justice</h3>
-	                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+	                <h3 class="heading">Sickly Visits, Stomach Ache,Fever</h3>
+	                <p>Sickly Visits, Severe Stomach Ache,Fever</p>
 	              </div>
 	            </div>
 	            <div class="services-wrap d-flex">
@@ -279,8 +279,8 @@ We are determined at providing best dental treatment at affordable rates with ou
 	            		<span class="flaticon-balance"></span>
 	              </div>
 	              <div class="media-body pr-4 order-md-first text-md-right">
-	                <h3 class="heading">Best Case Strategy</h3>
-	                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+	                <h3 class="heading">24/7 Online / Telephonic Consultations</h3>
+	                <p>24/7 Online / Telephonic consultations.</p>
 	              </div>
 	            </div>
 	            <div class="services-wrap d-flex">
@@ -288,8 +288,17 @@ We are determined at providing best dental treatment at affordable rates with ou
 	            		<span class="flaticon-balance"></span>
 	              </div>
 	              <div class="media-body pr-4 order-md-first text-md-right">
-	                <h3 class="heading">Experience Attorneys</h3>
-	                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+	                <h3 class="heading">Emergency Dental Treatment</h3>
+	                <p>Emergency Dental Treatment for pain relief.</p>
+	              </div>
+	            </div>
+	            <div class="services-wrap d-flex">
+	              <div class="icon d-flex justify-content-center align-items-center">
+	            		<span class="flaticon-balance"></span>
+	              </div>
+	              <div class="media-body pr-4 order-md-first text-md-right">
+	                <h3 class="heading">Free Dental camps and Health camps</h3>
+	                <p>Free Dental check up camps and Health checkup camps.</p>
 	              </div>
 	            </div>
 						</div>
@@ -547,7 +556,7 @@ We are determined at providing best dental treatment at affordable rates with ou
 	          	</div>
 	          	<div class="info-contact mb-5">
 	          		<h3>Address Information</h3>
-	          		<p><span>Address</span> <span> Sparh Health Care, G1, Ground floor, Bhoo Lok Apartment, Opposite HDFC Bank, Hinoo Main Road, Ranchi, Jharkhand. 834002</span></p>
+	          		<p><span>Address</span> <span> Sparsh Health Care, G1, Ground floor, Bhoo Lok Apartment, Opposite HDFC Bank, Hinoo Main Road, Ranchi, Jharkhand. 834002</span></p>
 	          	</div>
 						</div>
 					</div>
@@ -623,7 +632,7 @@ We are determined at providing best dental treatment at affordable rates with ou
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="modalAppointmentLabel">Post A Query</h5>
+            <h5 class="modal-title" id="modalAppointmentLabel">Make Appointment</h5>
             <button type="button" id="appointment_div" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
