--- a/contact.html
+++ b/contact.html
@@ -113,12 +113,12 @@
                 <input type="button" onclick="myFunction()" value="Send Message" class="btn btn-primary py-3 px-5">
               </div>
             </form>
-          <div id="formSubmitMessage" style="display:none" ><p>Submitted Successfully</p></div>
+          <div id="formSubmitMessage" style="display:none" ><p>Submitted Successfully, We will get back to you soon</p></div>
           <iframe name="hiddenFrame" width="0" height="0" class="hidden"></iframe>
           </div>
 
           <div class="col-md-6 d-flex">
-          	<div id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14654.396544780699!2d85.3156891!3d23.3302988!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb5ca45b6d3f27d55!2sSPARSH%20HEALTH%20CARE!5e0!3m2!1sen!2sin!4v1595849553867!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+          	<div id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14654.396544780699!2d85.3156891!3d23.3302988!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb5ca45b6d3f27d55!2sSPARSH%20HEALTH%20CARE!5e0!3m2!1sen!2sin!4v1595849553867!5m2!1sen!2sin" width="380" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
           </div>
         </div>
       </div>
